--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,1 @@
-{
-  "name": "FinanzasClaras",
-  "short_name": "Finanzas",
-  "start_url": ".",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#000000",
-  "icons": [
-    {
-      "src": "icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
-}
+{"name": "Finanzas Claras", "short_name": "Finanzas", "start_url": ".", "display": "standalone"}
